--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -40,3 +40,23 @@ layout: default
   {% endif %}
 </aside>
 {% endunless %}
+
+
+<script type="text/javascript" src="/javascripts/jquery.mousewheel-3.0.6.pack.js"></script>
+
+<!-- fancyBox -->
+<link rel="stylesheet" href="/stylesheets/jquery.fancybox.css?v=2.1.3" type="text/css" media="screen" />
+<script type="text/javascript" src="/javascripts/jquery.fancybox.pack.js?v=2.1.3"></script>
+
+<link rel="stylesheet" href="/stylesheets/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+<script type="text/javascript" src="/javascripts/jquery.fancybox-buttons.js?v=1.0.5"></script>
+<script type="text/javascript" src="/javascripts/jquery.fancybox-media.js?v=1.0.5"></script>
+
+<link rel="stylesheet" href="/stylesheets/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+<script type="text/javascript" src="/javascripts/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		$(".fancybox").fancybox();
+	});
+</script>
