fix fancybox loading style

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -7,3 +7,11 @@ ul.album-thumbs {
     display: inline-block;
   }
 }
+
+#fancybox-loading {
+  border-radius: 8px;
+  border: none;
+  div {
+    border: none;
+  }
+}
